add jumbotron with header, as well as a description

--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html lang="US">
 <head>
   <title>Diego's Portfolio</title>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
+<body>
+  <div class="container">
+    <div class="jumbotron">
+      <h1>Diego Serafico</h1>
+      <p>Software Developer</p>
+    </div>
+    <p>I am a student learning how to code at Epicodus. I'm driven, hardworking, and a great team player. I also have experience in the automotive field wich has taugh me patience and resilence as well as how to reach out to others when I need help.
+    </p>
+    
+  </div>
+</body>
 </html>
