add about me with image, and initial styling

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
       <h1>Diego Serafico</h1>
       <p>Software Developer</p>
     </div>
-    <p>I am a student learning how to code at Epicodus. I'm driven, hardworking, and a great team player. I also have experience in the automotive field wich has taugh me patience and resilence as well as how to reach out to others when I need help.
-    </p>
-    
+    <h2>About Me</h2>
+    <div class="about">
+      <img src="images/IMG_3554.jpg" alt="A picture of my self">
+      <p>I am a student learning how to code at Epicodus. I'm driven, hardworking, and a great team player. I also have experience in the automotive field wich has taugh me patience and resilence as well as how to reach out to others when I need help.
+      </p>
+    </div>
   </div>
 </body>
 </html>
