add projects section that clears floated image

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       <p>I am a student learning how to code at Epicodus. I'm driven, hardworking, and a great team player. I also have experience in the automotive field wich has taugh me patience and resilence as well as how to reach out to others when I need help.
       </p>
     </div>
+    <div class="item">
+      <h2>Projects I've Created</h2>
+    </div>
+    
   </div>
 </body>
 </html>
