--- a/index.html
+++ b/index.html
@@ -20,7 +20,106 @@
     <div class="item">
       <h2>Projects I've Created</h2>
     </div>
-    
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h2 class="card-title">Resume</h2>
+            <p>This website showcases my <span>resume</span> with info about me. Contact, education, experience, etc.
+            </p>
+            <h3>Languages:</h3>
+            <ul class="card-text">
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+            <p>To view my resume page click <a href="https://github.com/DiegoSerafico/resume-site">here</a>.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h2 class="card-title">My First Webpage</h2>
+            <p>This is a page for michaels favorite things. It also includes a page for michaels favorite places with links to those places websites and pictures of those places. It also includes my dogs page where you can see pictures of my dog.
+            </p>
+            <h3>Languages:</h3>
+            <ul class="card-text">
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+            <p>To view My First Webpage click <a href="https://github.com/DiegoSerafico/my-first-webpage">here</a>.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h2 class="card-title">Resort Website</h2>
+            <p>This website was designed to practice branching and merging. We set a couple of different branches and decided wich one was better, then merged it with main.
+            </p>
+            <h3>Languages:</h3>
+            <ul class="card-text">
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+            <p>To view my Resort Website click <a href="https://github.com/DiegoSerafico/resort-website">here</a>. 
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h2 class="card-title">Favorite Band</h2>
+            <p>This website shows picture of my favorite band as well as a sidebar showing their next shows.
+            </p>
+            <h3>Languages:</h3>
+            <ul class="card-text">
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+            <p>To view my Favorite Band page click <a href="https://github.com/DiegoSerafico/favorite-band">here</a>. 
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h2 class="card-title">Vacation</h2>
+            <p>An HTML website for Puerto Vallarta and things you can do there.
+            </p>
+            <h3>Languages:</h3>
+            <ul class="card-text">
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+            <p>To view my Vacation page click <a href="https://github.com/DiegoSerafico/vacation">here</a>. 
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h2 class="card-title">Interior Decorator</h2>
+            <p>This website is made to show different steps in an interior decoration progress with a description of what has been done.
+            </p>
+            <h3>Languages:</h3>
+            <ul class="card-text">
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+            <p>To visit my Interior Decorator page click <a href="https://github.com/DiegoSerafico/interior-decorator">here</a>. 
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
