add background section

--- a/index.html
+++ b/index.html
@@ -120,6 +120,30 @@
         </div>
       </div>
     </div>
+    <h2>Background</h2>
+    <div class="row">
+      <div class="col-12">
+        <div class="card">
+          <div class="card-body">
+            <h3>Education:</h3>
+            <ol>
+              <li>Roosevelt High School</li>
+              <li>North Seatte CC</li>
+              <li>Epicodus</li>
+            </ol>
+            <h3>Experience</h3>
+            <ol>
+              <li>Blue Onion Bistro</li>
+              <li>QFC</li>
+              <li>Carter Subaru</li>
+            </ol>
+            <h3>Programming, and why?</h3>
+            <p>I have a history with programming, and I like it. It is also a good career path that pays well and can lead to great management or leadership roles in the future.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
