update card to fit content, and update about me and background text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h2>About Me</h2>
     <div class="about">
       <img src="images/IMG_3554.jpg" alt="A picture of my self">
-      <p>Hello, my name is Diego Serafico. Currently I am a student learning how to code at Epicodus. I'm driven, hardworking, and a great team player. I also have experience in the automotive field wich has taugh me patience and resilence as well as how to reach out to others when I need help. I've played soccer since middle school and it's the hobby I enjoy the most. I played for Tynecastle FC all throughout highschool as well as the schools team and sunday leagues occasionally. Since the beggining of the pandemic all of the leagues closed and I haven't gotten to play yet, so I'm excited to get back out on the field. In the mean time I go to the gym to keep my body fit and prepared for when I can return to a team. My other hobby is cars, and this one is a particularly difficult one because you need tools and the proper setting to do it. I've aquired a number of tools over the years but the setting requires a house with a garage and a lift. Of course there's cheaper ways to do it but it becomes more tidious and takes more time. Car parts are also very expensive as well as tuning so it's a very slow hobby unless you are very well off. This also applys to my third hobby which is computers and gaming although for this one you need minimal tools and it can be done anywhere in your home. Despite this I enjoy my hobbies a lot and they help me stay in shape while keeping my mind focused and my problem solving skills sharp. Now at epicodus I'm hoping to expand my knowledge and go into the other aspect of cars and computers. With technology in vehicles growing more and more each day, I hope to be successful at Epicdus to get the experience nessesary to aquire a job that can combine the worlds I love.
+      <p>Hello, my name is <em>Diego Serafico</em>. Currently I am a student learning how to code at <span class="orgs">Epicodus</span>. I'm driven, hardworking, and a great team player. I also have experience in the automotive field wich has taugh me patience and resilence as well as how to reach out to others when I need help. I've played soccer since middle school and it's the hobby I enjoy the most. I played for <span class="orgs">Tynecastle FC</span> all throughout highschool as well as the schools team and sunday leagues occasionally. Since the beggining of the pandemic all of the leagues closed and I haven't gotten to play yet, so I'm excited to get back out on the field. In the mean time I go to the gym to keep my body fit and prepared for when I can return to a team. My other hobby is cars, and this one is a particularly difficult one because you need tools and the proper setting to do it. I've aquired a number of tools over the years but the setting requires a house with a garage and a lift. Of course there's cheaper ways to do it but it becomes more tidious and takes more time. Car parts are also very expensive as well as tuning so it's a very slow hobby unless you are very well off. This also applys to my third hobby which is computers and gaming although for this one you need minimal tools and it can be done anywhere in your home. Despite this I enjoy my hobbies a lot and they help me stay in shape while keeping my mind focused and my problem solving skills sharp. Now at <span class="orgs">Epicodus</span> I'm hoping to expand my knowledge and go into the other aspect of cars and computers. With technology in vehicles growing more and more each day, I hope to be successful at <span class="orgs">Epicodus</span> to get the experience nessesary to aquire a job that can combine the worlds I love.
       </p>
     </div>
     <div class="item">
@@ -32,7 +32,7 @@
               <li>HTML</li>
               <li>CSS</li>
             </ul>
-            <p>To view my resume page click <a href="https://github.com/DiegoSerafico/resume-site">here</a>.
+            <p>To view my <strong>Resume</strong> page click <a href="https://github.com/DiegoSerafico/resume-site">here</a>.
             </p>
           </div>
         </div>
@@ -48,7 +48,7 @@
               <li>HTML</li>
               <li>CSS</li>
             </ul>
-            <p>To view My First Webpage click <a href="https://github.com/DiegoSerafico/my-first-webpage">here</a>.
+            <p>To view <strong>My First Webpage</strong> click <a href="https://github.com/DiegoSerafico/my-first-webpage">here</a>.
             </p>
           </div>
         </div>
@@ -64,7 +64,7 @@
               <li>HTML</li>
               <li>CSS</li>
             </ul>
-            <p>To view my Resort Website click <a href="https://github.com/DiegoSerafico/resort-website">here</a>. 
+            <p>To view my <strong>Resort Website</strong> click <a href="https://github.com/DiegoSerafico/resort-website">here</a>. 
             </p>
           </div>
         </div>
@@ -82,7 +82,7 @@
               <li>HTML</li>
               <li>CSS</li>
             </ul>
-            <p>To view my Favorite Band page click <a href="https://github.com/DiegoSerafico/favorite-band">here</a>. 
+            <p>To view my <strong>Favorite Band</strong> page click <a href="https://github.com/DiegoSerafico/favorite-band">here</a>. 
             </p>
           </div>
         </div>
@@ -98,7 +98,7 @@
               <li>HTML</li>
               <li>CSS</li>
             </ul>
-            <p>To view my Vacation page click <a href="https://github.com/DiegoSerafico/vacation">here</a>. 
+            <p>To view my <strong>Vacation</strong> page click <a href="https://github.com/DiegoSerafico/vacation">here</a>. 
             </p>
           </div>
         </div>
@@ -114,7 +114,7 @@
               <li>HTML</li>
               <li>CSS</li>
             </ul>
-            <p>To visit my Interior Decorator page click <a href="https://github.com/DiegoSerafico/interior-decorator">here</a>. 
+            <p>To visit my <strong>Interior Decorator</strong> page click <a href="https://github.com/DiegoSerafico/interior-decorator">here</a>. 
             </p>
           </div>
         </div>
@@ -123,23 +123,25 @@
     <h2>Background</h2>
     <div class="row">
       <div class="col-12">
-        <div class="card">
-          <div class="card-body">
-            <h3>Education:</h3>
-            <ol>
-              <li>Roosevelt High School</li>
-              <li>North Seatte CC</li>
-              <li>Epicodus</li>
-            </ol>
-            <h3>Experience</h3>
-            <ol>
-              <li>Blue Onion Bistro</li>
-              <li>QFC</li>
-              <li>Carter Subaru</li>
-            </ol>
-            <h3>Programming, and why?</h3>
-            <p>I have a history with programming, and I like it. It is also a good career path that pays well and can lead to great management or leadership roles in the future.
-            </p>
+        <div class="background">
+          <div class="card">
+            <div class="card-body">
+              <h3>Education:</h3>
+              <ol>
+                <li>Roosevelt High School</li>
+                <li>North Seatte CC</li>
+                <li>Epicodus</li>
+              </ol>
+              <h3>Experience</h3>
+              <ol>
+                <li>Blue Onion Bistro</li>
+                <li>QFC</li>
+                <li>Carter Subaru</li>
+              </ol>
+              <h3>Programming, and why?</h3>
+              <p>I signed up for this course here at Epicodus because I want to persue a career in computer programming. I build computers for fun so I've always been interested in the world that surrounds them and I wanted to learn more about it. It is also a good career path that pays well and can lead to great management or leadership roles in the future. So many industries are now using technology and have increased the demand for the field, so I hope I can find something that mixes with my love for cars.
+              </p>
+            </div>
           </div>
         </div>
       </div>
