--- a/index.html
+++ b/index.html
@@ -11,14 +11,21 @@
       <h1>Diego Serafico</h1>
       <p>Software Developer</p>
     </div>
-    <h2>About Me</h2>
+    <div class="nav">
+      <ul>
+        <li><a href="#about_me">About Me</a></li>
+        <li><a href="#projects_ive_created">My Projects</a></li>
+        <li><a href="#background">Background</a></li>
+      </ul>
+    </div>
+    <h2><a id="about_me">About Me</a></h2>
     <div class="about">
       <img src="images/IMG_3554.jpg" alt="A picture of my self">
       <p>Hello, my name is <em>Diego Serafico</em>. Currently I am a student learning how to code at <span class="orgs">Epicodus</span>. I'm driven, hardworking, and a great team player. I also have experience in the automotive field wich has taugh me patience and resilence as well as how to reach out to others when I need help. I've played soccer since middle school and it's the hobby I enjoy the most. I played for <span class="orgs">Tynecastle FC</span> all throughout highschool as well as the schools team and sunday leagues occasionally. Since the beggining of the pandemic all of the leagues closed and I haven't gotten to play yet, so I'm excited to get back out on the field. In the mean time I go to the gym to keep my body fit and prepared for when I can return to a team. My other hobby is cars, and this one is a particularly difficult one because you need tools and the proper setting to do it. I've aquired a number of tools over the years but the setting requires a house with a garage and a lift. Of course there's cheaper ways to do it but it becomes more tidious and takes more time. Car parts are also very expensive as well as tuning so it's a very slow hobby unless you are very well off. This also applys to my third hobby which is computers and gaming although for this one you need minimal tools and it can be done anywhere in your home. Despite this I enjoy my hobbies a lot and they help me stay in shape while keeping my mind focused and my problem solving skills sharp. Now at <span class="orgs">Epicodus</span> I'm hoping to expand my knowledge and go into the other aspect of cars and computers. With technology in vehicles growing more and more each day, I hope to be successful at <span class="orgs">Epicodus</span> to get the experience nessesary to aquire a job that can combine the worlds I love.
       </p>
     </div>
     <div class="item">
-      <h2>Projects I've Created</h2>
+      <h2><a id="projects_ive_created">Projects I've Created</a></h2>
     </div>
     <div class="row">
       <div class="col-md-4">
@@ -120,7 +127,7 @@
         </div>
       </div>
     </div>
-    <h2>Background</h2>
+    <h2><a id="background">Background</a></h2>
     <div class="row">
       <div class="col-12">
         <div class="background">
