WIP: added gallery but needs javascript

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div class="item">
       <h2><a id="projects_ive_created">Projects I've Created</a></h2>
     </div>
+    <!-- Beginning of projects in rows -->
     <div class="row">
       <div class="col-md-4">
         <div class="card">
@@ -77,6 +78,7 @@
         </div>
       </div>
     </div>
+    <!-- Beggining of new row -->
     <div class="row">
       <div class="col-md-4">
         <div class="card">
@@ -127,6 +129,7 @@
         </div>
       </div>
     </div>
+    <!-- End of projects in rows -->
     <h2><a id="background">Background</a></h2>
     <div class="row">
       <div class="col-12">
@@ -150,6 +153,54 @@
               </p>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+    <!-- Container for image gallery -->
+    <div class="gallery">
+      <!-- Full-width images with number text -->
+      <div class="mySlides">
+        <div class="numbertext">1 / 6</div>
+          <img src="images/IMG_8180.jpg" style="width:100%">
+      </div>
+
+      <div class="mySlides">
+        <div class="numbertext">2 / 6</div>
+          <img src="images/IMG_7632.jpg" style="width:100%">
+      </div>
+
+      <div class="mySlides">
+        <div class="numbertext">3 / 6</div>
+          <img src="images/IMG_9148.jpg" style="width:100%">
+      </div>
+
+      <div class="mySlides">
+        <div class="numbertext">4 / 6</div>
+          <img src="images/IMG_7626.jpg" style="width:100%">
+      </div>
+
+      <!-- Next and previous buttons -->
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+      <!-- Image text -->
+      <div class="caption-container">
+        <p id="caption"></p>
+      </div>
+
+      <!-- Thumbnail images -->
+      <div class="row">
+        <div class="column">
+          <img class="demo cursor" src="images/IMG_8180.jpg" style="width:100%" onclick="currentSlide(1)" alt="Diego 1">
+        </div>
+        <div class="column">
+          <img class="demo cursor" src="images/IMG_7632.jpg" style="width:100%" onclick="currentSlide(2)" alt="Diego 2">
+        </div>
+        <div class="column">
+          <img class="demo cursor" src="images/IMG_9148.jpg" style="width:100%" onclick="currentSlide(3)" alt="Diego 3">
+        </div>
+        <div class="column">
+          <img class="demo cursor" src="images/IMG_7626.jpg" style="width:100%" onclick="currentSlide(4)" alt="Diego 4">
         </div>
       </div>
     </div>
