--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Diego's Portfolio</title>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <script src="js/scripts.js"></script>
 </head>
 <body>
   <div class="container">
